--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="icon" href="#" />
   </head>
   <body>
-    <h1>你来到了一个空白的世界，请选择往左还是往右</hi>
+
+    <h1>DUDU's Website</h1>
+
     <ol>
-      <li> <a href="right/index.html"target="_blank"title="right">往右</a></li>
-      <li> <a href="left/index.html">往左</a></li>
+        <li><a href="html-exercise/index.html">HTML-exercise</a></li>
+        <li><a href="css-demo/css-basics.html">CSS exercise</a></li>
+        <li><a href="js-exercise/index.html">JS exercise</a></li>
+    </ol>
+
+
+
+    
+
   </body>
 </html>
